--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^4.1.2",
+    "@mantine/dropzone": "^4.1.2",
+    "@mantine/form": "^4.1.2",
+    "@mantine/hooks": "^4.1.2",
+    "@mantine/next": "^4.1.2",
+    "@mantine/notifications": "^4.1.2",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
