--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mantine/notifications": "^4.1.2",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "tabler-icons-react": "^1.44.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
