--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^4.1.2",
     "@mantine/next": "^4.1.2",
     "@mantine/notifications": "^4.1.2",
+    "axios": "^0.26.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
