--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@mantine/hooks": "^4.1.2",
     "@mantine/next": "^4.1.2",
     "@mantine/notifications": "^4.1.2",
+    "@types/jest": "^27.4.1",
     "axios": "^0.26.1",
+    "jest": "^27.5.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "tabler-icons-react": "^1.44.0"
+    "tabler-icons-react": "^1.44.0",
+    "ts-jest": "^27.1.4"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
