--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:scripts": "tsc -p ./scripts",
+    "create:db": "C:/Sqlite/Sqlite3.exe recipes",
+    "create:dbtables": "node ./scripts"
   },
   "dependencies": {
     "@mantine/core": "^4.1.2",
@@ -16,11 +19,14 @@
     "@mantine/next": "^4.1.2",
     "@mantine/notifications": "^4.1.2",
     "@types/jest": "^27.4.1",
+    "@vscode/sqlite3": "^5.0.8",
     "axios": "^0.26.1",
     "jest": "^27.5.1",
+    "knex": "^1.0.5",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "sqlite3": "^5.0.2",
     "tabler-icons-react": "^1.44.0",
     "ts-jest": "^27.1.4"
   },
