--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "build:scripts": "tsc -p ./scripts",
     "create:db": "C:/Sqlite/Sqlite3.exe recipes",
-    "create:dbtables": "node ./scripts"
+    "create:dbtables": "node ./scripts",
+    "cleardb": "node ./scripts/clear-db.js"
   },
   "dependencies": {
     "@mantine/core": "^4.1.2",
@@ -21,6 +22,7 @@
     "@types/jest": "^27.4.1",
     "@vscode/sqlite3": "^5.0.8",
     "axios": "^0.26.1",
+    "formidable": "^2.0.1",
     "jest": "^27.5.1",
     "knex": "^1.0.5",
     "next": "12.1.4",
@@ -31,6 +33,7 @@
     "ts-jest": "^27.1.4"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.4",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
